# ninjaengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake_modules/: FindSDL2.cmake
ninjacore/: CMakeLists.txt  image.cpp  image.h  ninjacore.h  resource_manager.cpp  resource_manager.h  types.h  window.cpp  window.h  window_manager.cpp  window_manager.h
ninjacore/SDL2/: sdl2_window.cpp  sdl2_window.h
ninjaengine/: CMakeLists.txt  main.cpp
ninjatool/: CMakeLists.txt  carousel.cpp  carousel.h  documentwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  ninjatoolsettingswidget.cpp  ninjatoolsettingswidget.h  objecttype.cpp  objecttype.h  objecttypescene.cpp  objecttypescene.h  projectmanager.cpp  projectmanager.h  settingsconstants.cpp  settingsconstants.h  settingsmanager.cpp  settingsmanager.h  tools.h
ninjatool/Icons/: icon.icns
ninjatool/editors/: documentwidget.h  newproject.cpp  newproject.h  newwidget.cpp  newwidget.h  settingswidget.cpp  settingswidget.h
ninjatool/objects/: scene.cpp  scene.h
ninjatool/resources/: image.cpp  image.h
